[package]
name = "test-span-macro"
version = "0.8.0"
authors = [
    "Jeremy Lempereur <jeremy@apollographql.com>",
    "Benjamin Coenen <benjamin.coenen@apollographql.com>",
]
edition = "2021"
description = "macro to do snapshot tests on tracing spans, usint test-span"
repository = "https://github.com/apollographql/test-span"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
