[package]
name = "test-span"
version = "0.8.0"
authors = [
    "Jeremy Lempereur <jeremy@apollographql.com>",
    "Benjamin Coenen <benjamin.coenen@apollographql.com>",
]
edition = "2021"
description = "macro and utilities to do snapshot tests on tracing spans"
repository = "https://github.com/apollographql/test-span"
keywords = ["tracing", "span", "log", "test", "snapshot"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"

[features]
default = [
    "serde_json/preserve_order"
]
std = []

[dependencies]
daggy = { version = "0.8.0", features = ["serde-1", "stable_dag"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
test-span-macro = { path = "../test-span-macro" }
indexmap = "2.2.0"
once_cell = "1.9.0"
tracing-core = "0.1.21"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }

[dev-dependencies]
insta = { version = "1.8.0", features = ["json"] }
futures = "0.3.19"

[[test]]
name = "tests"
path = "tests/tests.rs"
